--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Mechanics, robotics, electronics etc </p>
     
 <center>
-       <a class='mypro' href= 'https://www.w3schools.com/howto/howto_css_menu_icon.asp' >
+       <a class='mypro' href= '' >
   
         
         <h2>My Projects </h2> <div class='themen'>
